apu coin website

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <br> Are we gonna make it: Yes
 
 
-            <br><br> <span class="highlightText"><a href="//www.youtube.com/watch?v=dQw4w9WgXcQ"
+            <br><br> <span class="highlightText"><a href="//www.youtube.com/watch?v=FrqulRFrnWc"
                 target="_blank">GN</a></span>
 
           </blockquote>
@@ -201,10 +201,11 @@
 
   <div id="absbot" class="absBotText">
     <div id="footer-links">
-      <a href="//www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">About</a> &bull;
-      <a href="//www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Feedback</a> &bull;
-      <a href="//www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Legal</a> &bull;
-      <a href="//www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Contact</a>
+      <a href="//
+      .youtube.com/watch?v=FrqulRFrnWc" target="_blank">About</a> &bull;
+      <a href="//www.youtube.com/watch?v=FrqulRFrnWc" target="_blank">Feedback</a> &bull;
+      <a href="//www.youtube.com/watch?v=FrqulRFrnWc" target="_blank">Legal</a> &bull;
+      <a href="//www.youtube.com/watch?v=FrqulRFrnWc" target="_blank">Contact</a>
     </div>
   </div>
 </body>
